# dropcast

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  build.rs  cog.toml  lefthook.yml  release-please-config.json
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: .nojekyll  index.html  styles.css
scripts/: build-ffmpeg.sh  check-conventional-commit.sh  package-macos-app.sh  prepare-pages.sh
src/: args.rs  bundled_ffmpeg.rs  cast.rs  discovery.rs  lib.rs  main.rs  range.rs  server.rs  subtitles.rs
