[package]
name = "dropcast"
version = "0.4.0"
edition = "2024"
description = "Stream a local movie to a Google Cast-enabled TV"
license = "MIT"
keywords = ["chromecast", "cast", "stream", "movie", "cli"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
async-channel = "2.5"
cast-sender = "0.3"
ctrlc = "3.5"
dialoguer = { version = "0.12", default-features = false }
mdns-sd = { version = "0.20", default-features = false }
serde_json = "1"
smol = "2"
tiny_http = "0.12"

[build-dependencies]
flate2 = "1.1"
sha2 = "0.11"
ureq = { version = "3.3", default-features = false, features = ["rustls"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
